objects/Deal_Close_Plan__c/Deal_Close_Plan__c.object-meta.xml
<CustomObject>
    <label>Close Plan Step</label>
    <nameField>
        <displayFormat>DCP-{00000}</displayFormat>
        <label>Mutual Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Close Plan Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>