objects/Deal_Close_Plan__c/fields/Customer_Owner__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner__c</fullName>
    <label>Customer Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>