objects/Deal_Close_Plan__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>