objects/Deal_Close_Plan__c/fields/Tanium_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Owner__c</fullName>
    <label>Tanium Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>